--- a/app/globals.css
+++ b/app/globals.css
@@ -66,6 +66,17 @@
     }
   }
 
+  body {
+    background-color: white;
+    color: black;
+  }
+
+  .swiper {
+    width: 100%;
+    height: 400px;
+    box-sizing: border-box;
+  }
+
   @layer base {
     * {
       @apply border-border;
